[gd_scene load_steps=4 format=3 uid="uid://b7bx3my0tu4k"]

[ext_resource type="Script" path="res://Scripts/Level/End.gd" id="1_jh4xt"]
[ext_resource type="Texture2D" uid="uid://dljm4ieqpndwn" path="res://Assets/Buttons/PlayAgain.png" id="2_nn7ks"]
[ext_resource type="Texture2D" uid="uid://btvmg50yom3ha" path="res://Assets/Buttons/Menu.png" id="3_aci2g"]

[node name="End" type="CanvasLayer"]
process_mode = 3
layer = 128
follow_viewport_enabled = true
script = ExtResource("1_jh4xt")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -269.0
offset_right = 196.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayAgain" type="TextureButton" parent="."]
offset_left = 413.0
offset_top = 365.0
offset_right = 557.0
offset_bottom = 437.0
texture_normal = ExtResource("2_nn7ks")

[node name="BackToMenu" type="TextureButton" parent="."]
offset_left = 598.0
offset_top = 365.0
offset_right = 742.0
offset_bottom = 437.0
texture_normal = ExtResource("3_aci2g")

[node name="Stats" type="Label" parent="."]
offset_left = 526.0
offset_top = 75.0
offset_right = 613.0
offset_bottom = 125.0
theme_override_font_sizes/font_size = 36
text = "Stats"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GradeLabel" type="Label" parent="."]
offset_left = 466.0
offset_top = 150.0
offset_right = 515.0
offset_bottom = 173.0
text = "Grade:"

[node name="GradeNumber" type="Label" parent="."]
offset_left = 564.0
offset_top = 151.0
offset_right = 565.0
offset_bottom = 174.0

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 466.0
offset_top = 178.0
offset_right = 551.0
offset_bottom = 201.0
text = "Final score:"

[node name="ScoreNumber" type="Label" parent="."]
offset_left = 564.0
offset_top = 178.0
offset_right = 565.0
offset_bottom = 201.0

[node name="ComboLabel" type="Label" parent="."]
offset_left = 466.0
offset_top = 201.0
offset_right = 561.0
offset_bottom = 224.0
text = "Max combo:"

[node name="ComboNumber" type="Label" parent="."]
offset_left = 564.0
offset_top = 201.0
offset_right = 565.0
offset_bottom = 224.0

[node name="PerfectLabel" type="Label" parent="."]
offset_left = 466.0
offset_top = 224.0
offset_right = 526.0
offset_bottom = 247.0
text = "Perfect:"

[node name="PerfectNumber" type="Label" parent="."]
offset_left = 564.0
offset_top = 224.0
offset_right = 565.0
offset_bottom = 247.0

[node name="GoodLabel" type="Label" parent="."]
offset_left = 466.0
offset_top = 247.0
offset_right = 509.0
offset_bottom = 270.0
text = "Good:"

[node name="GoodNumber" type="Label" parent="."]
offset_left = 564.0
offset_top = 247.0
offset_right = 565.0
offset_bottom = 270.0

[node name="OkayLabel" type="Label" parent="."]
offset_left = 466.0
offset_top = 270.0
offset_right = 508.0
offset_bottom = 293.0
text = "Okay:"

[node name="OkayNumber" type="Label" parent="."]
offset_left = 564.0
offset_top = 270.0
offset_right = 565.0
offset_bottom = 293.0

[node name="MissedLabel" type="Label" parent="."]
offset_left = 466.0
offset_top = 293.0
offset_right = 525.0
offset_bottom = 316.0
text = "Missed:"

[node name="MissedNumber" type="Label" parent="."]
offset_left = 564.0
offset_top = 293.0
offset_right = 565.0
offset_bottom = 316.0

[connection signal="pressed" from="PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="BackToMenu" to="." method="_on_back_to_menu_pressed"]
